<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RadioGroupActivity">

    <RadioGroup
        android:id="@+id/orientation"
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="5dp">
        <RadioButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/horizontal"
            android:text="@string/horizontal"
            />
        <RadioButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/vertical"
            android:text="@string/vertical"
            />
    </RadioGroup>
    <RadioGroup
        android:id="@+id/gravity"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/right"
            android:text="@string/right"/>
        <RadioButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/center"
            android:text="@string/center"/>
        <RadioButton
            android:layout_width="120dp"
            android:layout_height="wrap_content"
            android:id="@+id/left"
            android:text="@string/left"/>
    </RadioGroup>
    <CheckBox
        android:id="@+id/cajita"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/not_checked"
        />
</LinearLayout>